--- a/style.css
+++ b/style.css
@@ -317,168 +317,74 @@ body {
 	color: #3C91E6;
 	pointer-events: unset;
 }
+#content main .head-title .btn-download {
+	height: 36px;
+	padding: 0 16px;
+	border-radius: 36px;
+	background: #3C91E6;
+	color: #F9F9F9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	grid-gap: 10px;
+	font-weight: 500;
+}
 
 
 
 
 #content main .box-info {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-	grid-gap: 24px;
-	margin-top: 17px;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+	grid-gap: 28px;
+	margin-top: 26px;
 }
-
 #content main .box-info li {
-	padding: 24px;
+	padding: 10px;
 	background: #F9F9F9;
 	border-radius: 20px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	grid-gap: 24px;
+	grid-gap: 80px;
 }
+#content main .box-info li .icons{
+	/* margin: auto; */
+	display: grid;
+	grid-template-columns: repeat(1,1fr);
+	gap: 10px;
 
-
+}
 #content main .box-info li .bx {
-	width: 80px;
-	height: 80px;
-	border-radius: 10px;
-	font-size: 36px;
-	display: flex;
+	width: 32px;
+	height: 32px;
+	border-radius: 4px;
+	font-size: 20px;
+	display: grid;
+	color: #060714;
+	
 	justify-content: center;
 	align-items: center;
 }
-
-
-.circular{
-	display: grid;
-	height: 100px;
-	width: 100px;
-	position: relative;
-  }
-  .circular .inner, .circular .outer, .circular .circle{
-	position: absolute;
-	z-index: 6;
-	height: 100%;
-	width: 100%;
-	border-radius: 100%;
-	box-shadow: inset 0 1px 0 rgba(0,0,0,0.2);
-  }
-  .circular .inner{
-	top: 50%;
-	left: 50%;
-	height: 80px;
-	width: 80px;
-	margin: -40px 0 0 -40px;
-	background-color: #dde6f0;
-	border-radius: 100%;
-	box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-  }
-  .circular .circle{
-	z-index: 1;
-	box-shadow: none;
-  }
-  .circular .numb{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 10;
-	font-size: 18px;
-	font-weight: 500;
-	color: #4158d0;
-  }
-  .circular .bar{
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background: #fff;
-	-webkit-border-radius: 100%;
-	clip: rect(0px, 100px, 100px, 50px);
-  }
-  .circle .bar .progress{
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	-webkit-border-radius: 100%;
-	clip: rect(0px, 50px, 100px, 0px);
-  }
-  .circle .bar .progress, .dot span{
-	background: #4158d0;
-  }
-  .circle .left .progress{
-	z-index: 1;
-	animation: left 4s linear both;
-  }
-  @keyframes left {
-	100%{
-	  transform: rotate(180deg);
-	}
-  }
-  .circle .right{
-	z-index: 3;
-	transform: rotate(180deg);
-  }
-  .circle .right .progress{
-	animation: right 4s linear both;
-	animation-delay: 4s;
-  }
-  @keyframes right {
-	100%{
-	  transform: rotate(180deg);
-	}
-  }
-  .circle .dot{
-	z-index: 2;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 50%;
-	height: 10px;
-	margin-top: -5px;
-	animation: dot 8s linear both;
-	transform-origin: 0% 50%;
-  }
-  .circle .dot span {
-	position: absolute;
-	right: 0;
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-  }
-  @keyframes dot{
-	0% {
-	  transform: rotate(-90deg);
-	}
-	50% {
-	  transform: rotate(90deg);
-	  z-index: 4;
-	}
-	100% {
-	  transform: rotate(270deg);
-	  z-index: 4;
-	}
-  }
-
 #content main .box-info li:nth-child(1) .bx {
 	background: #CFE8FF;
-	color: #3C91E6;
+	/* color: #3C91E6; */
 }
 #content main .box-info li:nth-child(2) .bx {
 	background: var(--light-yellow);
-	color: #FFCE26;
+	/* color: #FFCE26; */
 }
 #content main .box-info li:nth-child(3) .bx {
 	background: #FFE0D3;
-	color: #FD7238;
+	/* color: #FD7238; */
 }
 #content main .box-info li .text h3 {
 	font-size: 24px;
 	font-weight: 600;
-	color: #342E37;
+	/* color: #342E37; */
 }
 #content main .box-info li .text p {
-	color: #342E37;	
+	/* color: #342E37;	 */
 }
 
 
