--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ a {
 li {
 	list-style: none;
 }
-
+ hr{
+	margin-bottom: 10px;
+ }
 
 html {
 	overflow-x: hidden;
@@ -68,11 +70,6 @@ body {
 	z-index: 500;
 	padding-bottom: 20px;
 	box-sizing: content-box;
-}
-#sidebar .brand .bx {
-	min-width: 60px;
-	display: flex;
-	justify-content: center;
 }
 #sidebar .side-menu {
 	width: 100%;
@@ -334,8 +331,35 @@ body {
 	grid-gap: 80px;
 }
 
+.details{
+	display: grid;
+	gap: 10px;
 
+}
+.info{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.details img{
+	height: 30px;
+}
+.details .date{
+	font-size: 10px;
+}
 
+.info .user{
+	display: flex; 
+	align-items: center;
+	gap: 5px;
+}
+
+.fas {
+	font-size: 22px;
+	background-color: #44c2e4;
+	padding: 5px;
+	border-radius: 5px;
+}
 
 #content main .box-info li .icons{
 	padding-top: 25px;
