--- a/style.css
+++ b/style.css
@@ -253,6 +253,14 @@ body {
 	object-fit: cover;
 	border-radius: 50%;
 }
+#content nav .profile{
+	font-weight: 600;
+	display: flex; 
+	align-items: center; 
+	gap: 10px;
+}
+
+
 #content nav .switch-mode {
 	display: block;
 	min-width: 50px;
@@ -341,8 +349,10 @@ body {
 	justify-content: space-between;
 	align-items: center;
 }
-.details img{
+.info img{
 	height: 30px;
+	width: 35px;
+	/* border-radius: ; */
 }
 .details .date{
 	font-size: 10px;
