--- a/assets/style/formstyle.css
+++ b/assets/style/formstyle.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap');
 
-/* Applying 'Lato' font family to all text elements */
+
 input{
     font-family: 'Lato', sans-serif;
     padding-left: 100px;
@@ -104,6 +104,16 @@ th {
     transition: background-color 0.3s ease; 
     border-radius: 5px;
 }
+.attendance-button{
+    background-color: #007bff; 
+    color: #ffffff; 
+    border: none;
+    padding: 10px 20px; 
+    margin-left: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+    border-radius: 5px;
+}
 .view {
     display: flex;
     margin: auto;
@@ -111,7 +121,7 @@ th {
     background-color: #007bff;
     color: #ffffff; 
     border: none;
-    padding: 10px 20px; 
+    padding: 5px 1px; 
     border-radius: 5px;
 }
 
