--- a/login_css.css
+++ b/login_css.css
@@ -10,13 +10,24 @@ body{
     align-items: center;
     min-height: 100vh;
 }
+
 .container{
     width: 100%;
     display: flex;
-    max-width: 850px;
+    max-width: 950px;
     background: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.container i{
+    position: absolute;
+    left: 65px;
+   color: blue;
+   margin-top: 18px;
+
 }
 .login{
     width: 400px;
@@ -39,14 +50,6 @@ p{
 hr{
     border-top: 2px solid #1353df;
 }
-
-.pic img{
-    width: 450px;
-    height: 100%;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
 form label{
     display: block;
     font-size: 16px;
@@ -64,6 +67,33 @@ input{
     border-bottom: 1px solid black;
     border-radius: 0;
 }
+.option{
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+.container input:focus{
+    border-bottom-color: #007bff;
+}
+
+button[type="submit"] {
+    border: none;
+    width: 200px;
+    padding: 8px;
+    position: relative;
+    color: white;
+    /* background-color: #007bff; */
+    margin-bottom: 10px;
+}
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    color: #007bff;
+    
+}
+
 button{
     border: none;
     outline: none;
@@ -79,11 +109,4 @@ button{
 button:hover{
     background: #1353df;
     transition: all .3s ease;
-}
-p{
-    margin: 20px;
-}
-a{
-    color: black;
-    text-decoration: none;
 }
