--- a/assets/style/formstyle.css
+++ b/assets/style/formstyle.css
@@ -94,7 +94,7 @@ th {
     max-width: 1500px; 
 }
 
-.search-button {
+button {
     background-color: #007bff; 
     color: #ffffff; 
     border: none;
@@ -125,7 +125,7 @@ th {
     border-radius: 5px;
 }
 
-.search-button:hover , .view:hover{
+button:hover , .view:hover{
     background-color: #0056b3; 
     
 }
