--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,9 +50,9 @@ body {
 	overflow-x: hidden;
 	scrollbar-width: none;
 }
-#sidebar::--webkit-scrollbar {
+/* #sidebar::--webkit-scrollbar {
 	display: none;
-}
+} */
 #sidebar.hide {
 	width: 60px;
 }
@@ -156,7 +156,7 @@ body {
 	bottom: -40px;
 	left: 0;
 	border-radius: 50%;
-	box-shadow: -20px -20px 0 #F9F9F9;
+	box-shadow: -20px -20px 0  #F9F9F9;
 }
 #content nav a {
 	color: #342E37;
@@ -260,27 +260,9 @@ body {
 	align-items: center; 
 	gap: 10px;
 }
-
-
-#content nav .switch-mode {
-	display: block;
-	min-width: 50px;
-	height: 25px;
-	border-radius: 25px;
-	background: #eee;
-	cursor: pointer;
-	position: relative;
-}
-#content nav .switch-mode::before {
-	content: '';
-	position: absolute;
-	top: 2px;
-	left: 2px;
-	bottom: 2px;
-	width: calc(25px - 4px);
-	background: #3C91E6;
-	border-radius: 50%;
-	transition: all .3s ease;
+#content nav .profile{
+	width: 400px;
+	justify-content: end;
 }
 /* NAVBAR */
 
@@ -406,214 +388,4 @@ body {
 .icons .count h3{
 	font-weight: 700;
 	font-size: 14px;
-}
-#content main .box-info li:nth-child(1) .bx {
-	background: #CFE8FF;
-	/* color: #3C91E6; */
-}
-#content main .box-info li:nth-child(2) .bx {
-	background: var(--light-yellow);
-	/* color: #FFCE26; */
-}
-#content main .box-info li:nth-child(3) .bx {
-	background: #FFE0D3;
-	/* color: #FD7238; */
-}
-#content main .box-info li .text h3 {
-	font-size: 24px;
-	font-weight: 600;
-	/* color: #342E37; */
-}
-/* #content main .box-info li .text p {
-	color: #342E37;	
-} */
-
-
-#aca{
-	display: none;
-}
-
-
-#content main .table-data {
-	display: flex;
-	flex-wrap: wrap;
-	grid-gap: 24px;
-	margin-top: 24px;
-	width: 100%;
-	color: #342E37;
-}
-#content main .table-data > div {
-	border-radius: 20px;
-	background: #F9F9F9;
-	padding: 24px;
-	overflow-x: auto;
-}
-#content main .table-data .head {
-	display: flex;
-	align-items: center;
-	grid-gap: 16px;
-	margin-bottom: 24px;
-}
-#content main .table-data .head h3 {
-	margin-right: auto;
-	font-size: 24px;
-	font-weight: 600;
-}
-#content main .table-data .head .bx {
-	cursor: pointer;
-}
-
-#content main .table-data .order {
-	flex-grow: 1;
-	flex-basis: 500px;
-}
-#content main .table-data .order table {
-	width: 100%;
-	border-collapse: collapse;
-}
-#content main .table-data .order table th {
-	padding-bottom: 12px;
-	font-size: 13px;
-	text-align: left;
-	border-bottom: 1px solid #eee;
-}
-#content main .table-data .order table td {
-	padding: 16px 0;
-}
-#content main .table-data .order table tr td:first-child {
-	display: flex;
-	align-items: center;
-	grid-gap: 12px;
-	padding-left: 6px;
-}
-#content main .table-data .order table td img {
-	width: 36px;
-	height: 36px;
-	border-radius: 50%;
-	object-fit: cover;
-}
-#content main .table-data .order table tbody tr:hover {
-	background: #eee;
-}
-#content main .table-data .order table tr td .status {
-	font-size: 10px;
-	padding: 6px 16px;
-	color: #F9F9F9;
-	border-radius: 20px;
-	font-weight: 700;
-}
-#content main .table-data .order table tr td .status.completed {
-	background: #3C91E6;
-}
-#content main .table-data .order table tr td .status.process {
-	background: #FFCE26;
-}
-#content main .table-data .order table tr td .status.pending {
-	background: #FD7238;
-}
-
-
-#content main .table-data .todo {
-	flex-grow: 1;
-	flex-basis: 300px;
-}
-#content main .table-data .todo .todo-list {
-	width: 100%;
-}
-#content main .table-data .todo .todo-list li {
-	width: 100%;
-	margin-bottom: 16px;
-	background: #eee;
-	border-radius: 10px;
-	padding: 14px 20px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-#content main .table-data .todo .todo-list li .bx {
-	cursor: pointer;
-}
-#content main .table-data .todo .todo-list li.completed {
-	border-left: 10px solid #3C91E6;
-}
-#content main .table-data .todo .todo-list li.not-completed {
-	border-left: 10px solid #FD7238;
-}
-#content main .table-data .todo .todo-list li:last-child {
-	margin-bottom: 0;
-}
-/* MAIN */
-/* CONTENT */
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 768px) {
-	#sidebar {
-		width: 200px;
-	}
-
-	#content {
-		width: calc(100% - 60px);
-		left: 200px;
-	}
-
-	#content nav .nav-link {
-		display: none;
-	}
-}
-
-
-
-
-
-
-@media screen and (max-width: 576px) {
-	#content nav form .form-input input {
-		display: none;
-	}
-
-	#content nav form .form-input button {
-		width: auto;
-		height: auto;
-		background: transparent;
-		border-radius: none;
-		color: #342E37;
-	}
-
-	#content nav form.show .form-input input {
-		display: block;
-		width: 100%;
-	}
-	#content nav form.show .form-input button {
-		width: 36px;
-		height: 100%;
-		border-radius: 0 36px 36px 0;
-		color: #F9F9F9;
-		background: #FFCE26;
-	}
-
-	#content nav form.show ~ .notification,
-	#content nav form.show ~ .profile {
-		display: none;
-	}
-
-	#content main .box-info {
-		grid-template-columns: 1fr;
-	}
-
-	#content main .table-data .head {
-		min-width: 420px;
-	}
-	#content main .table-data .order table {
-		min-width: 420px;
-	}
-	#content main .table-data .todo .todo-list {
-		min-width: 420px;
-	}
 }
