--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header h3{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     padding: 20px;
-    margin: 20px auto; 
+    margin: 2px auto; 
     max-width: 1500px; 
 }
 
@@ -41,6 +41,7 @@ main{
   display: grid;
   grid-template-columns: repeat(4,1fr);
   grid-gap: 20px;
+  /* border-radius: 20px; */
 }
 
 
@@ -122,7 +123,7 @@ main{
 }
 
 .wrapper{
-  margin-top: 50px;
+  margin-top: 15px;
   flex-wrap: wrap;
   align-items: flex-start;
 }
@@ -132,7 +133,7 @@ main{
   box-shadow: 0 0 8px rgba(0,0,0,0.07);
 }
 .projects{
-  flex-basis: 60%;
+  flex-basis: 100%;
 }
 .customers{
   flex-basis: 37%;
@@ -211,3 +212,5 @@ thead :is(tr,td,th){
   margin: 0 3px;
   font-size: 20px;
 }
+
+
