--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -183,10 +183,9 @@ body {
 }
 #content nav .intro{
 	flex-grow: 1;
-	padding: 0 16px;
+	/* padding: 0 16px; */
 	height: 100%;
 	border: none;
-	border-radius: 36px 0 0 36px;
 	outline: none;
 	width: 100%;
 	color: #342E37;
