--- a/assets/style/pacademics.css
+++ b/assets/style/pacademics.css
@@ -19,7 +19,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="text"],
+input[type="text"],input[type="month"],
 select {
     width: 100%;
     padding: 8px;
@@ -27,22 +27,6 @@ select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-}
-input[type="date"],
-select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-/* CSS for arranging fields in rows of three */
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
 }
 
 .column {
@@ -81,20 +65,21 @@ th {
     display: flex;
     margin: auto;
     justify-content: center;
-    background-color: #007bff;
-    color: #ffffff; 
+    /* background-color: #007bff; */
+    color: #007bff; 
+    font-weight: 600;
     border: none;
     padding: 5px 1px; 
     border-radius: 5px;
 }
 
-
-#checkAllButton, #uncheckAllButton, .attendance-button{
+.attendance-button{
     border: none;
     background-color: transparent;
-    background-color: #007bff;
+    color: #007bff;
+    font-weight: 600;
     padding: 5px;
+    font-size: 15px;
     border-radius: 5px;
-    color: white;
-    font-weight: 500;
+    cursor: pointer;
 }
