--- a/assets/style/students.css
+++ b/assets/style/students.css
@@ -1,7 +1,6 @@
 
 .card{
     position: relative;
-    
     width: 97%;
     border-radius: 6px;
     padding: 30px;
@@ -18,7 +17,7 @@
 .card form{
     position: relative;
     margin-top: 16px;
-    min-height: 400px;
+    min-height:650px;
     background-color: #fff;
     overflow: hidden;
 }
@@ -44,7 +43,7 @@ form .fields .input-field{
     font-weight: 500;
     color: #2e2e2e;
 }
-.input-field input, select{
+.input-field input,textarea, select{
     outline: none;
     font-size: 14px;
     font-weight: 400;
@@ -63,6 +62,12 @@ background-color:#3C91E6 ;
 color: white;
 font-weight: 500;
 border-radius: 5px;
+cursor: pointer;
 font-size: 16px;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
