new changes made

--- a/assets/style/notice.css
+++ b/assets/style/notice.css
@@ -7,6 +7,7 @@
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    text-align: center;
 }
 
 .main-course h1{
@@ -23,7 +24,8 @@
 
 .content-table th,
 .content-table td {
-    padding: 12px 15px;
+    padding: 12px 5px;
+    text-align: center;
 }
 
 .content-table tbody tr {
@@ -112,7 +114,7 @@
 
 .wrapper #toggle:checked ~ .nav {
     left: 0;
-    top: -25.1em; /* Adjust this value to control the menu's position upwards */
+    top: -26.6em; /* Adjust this value to control the menu's position upwards */
     opacity: 1;
     transition: left 0ms ease-in-out 0ms,
     top 500ms ease-in-out,
