new changes made

--- a/assets/style/history.css
+++ b/assets/style/history.css
@@ -76,14 +76,14 @@ h5{
     
 }
 
-
+/* 
 input[type="text"]{
     width: 200px;
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-}
+} */
 
 .submit{
     padding: 0 8px;
