--- a/assets/style/students.css
+++ b/assets/style/students.css
@@ -55,7 +55,7 @@ form .fields .input-field{
     margin: 8px 0;
 }
 
-#register{
+#register,#search{
 padding: 5px 10px;
 border: none;
 background-color:#3C91E6 ;
@@ -65,6 +65,16 @@ border-radius: 5px;
 cursor: pointer;
 font-size: 16px;
 }
+#search{
+    margin-left: 20px;
+}
+
+
+.card2 form input{
+    height: 30px;
+    margin-left: 25px;
+}
+
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -73,50 +83,24 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 
-.card2 select {
-    width: 100%;
-    padding: 5px;
-    background-color: transparent;
-    color: white;
+.card2 form input{
     border: none;
+    border-bottom: 1px solid black;
     text-align: center;
-    font-size: 16px;
-    font-weight: 700;
 }
-.card2 select option {
-    color: black;
-}
-.search-input {
-    text-align: center;
-    border: none;
-    border-bottom: 1px solid white;
-    padding: 5px;
-    width: 150px;
-    background-color: transparent;
-    color: white;
-    outline: none; /* Remove the border that appears on focus */
-}
-
-.search-input::placeholder {
-    color: white;
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.card2 select {
-    -webkit-appearance: none; 
-    -moz-appearance: none; 
-    appearance: none; 
-    background: transparent;
-    border: none;
-    padding: 5px;
-    color: white;
-    font-size: 16px;
-    font-weight: 700;
+.card2 form select{
     outline: none;
-}
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    border-radius: 5px;
+    border: none;
+    border-bottom: 1px solid black;
+    padding: 0 15px;
+    height: 32px;
+    margin: 8px 0;
+    border-radius: 0px;
+    margin-left: 20px;
 
-.card2 select {
-    width: 100%;
+
 }
- 
